--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.6.0'
 	implementation 'org.jboss.logging:jboss-logging:3.5.0.Final'
 	implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
+	implementation 'com.fasterxml:classmate:1.5.1'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
