--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
 	implementation 'com.fasterxml:classmate:1.5.1'
 	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
